# BWT-Wrapper

./: .gitignore  CHANGELOG.md  README.md  credentials.toml.example  pyproject.toml
.github/workflows/: tests.yml
bwt_wrapper/: __init__.py  account.py  api.py  blocked.py  crawl.py  credentials.py  enumerations.py  keywords.py  query.py  report.py  schemas.py
tests/: conftest.py  live_check.py  test.py  test_account.py  test_api.py  test_blocked.py  test_crawl.py  test_credentials.py  test_enumerations.py  test_keywords.py  test_query_page_stats.py  test_report.py
